--- a/build.gradle
+++ b/build.gradle
@@ -9,10 +9,6 @@ ext {
     androidSDK = System.getenv('ANDROID_HOME') ?: System.getenv('ANDROID_SDK_ROOT')
 }
 
-if(androidSDK == null) {
-    throw new IllegalStateException('Android SDK is requiered in order to build this project')
-}
-
 allprojects {
     apply plugin: 'java-library'
 
@@ -50,37 +46,39 @@ allprojects {
 dependencies {
     compileOnly('org.jetbrains:annotations:22.0.0')
     compileOnly('com.github.Anuken:Mindustry:v126')
-    compileOnly files("$androidSDK/platforms/android-31/android.jar")
+    // compileOnly files("$androidSDK/platforms/android-31/android.jar")
 }
 
-task buildAndDex(type: Jar) {
-    dependsOn(tasks.shadowJar)
-    archiveName(project.name + '-dexed.jar')
+if (androidSDK != null) {
+    task buildAndDex(type: Jar) {
+        dependsOn(tasks.shadowJar)
+        archiveName(project.name + '-dexed.jar')
 
-    File dexFile = new File(tasks.buildAndDex.temporaryDir, 'dex.jar')
-    File jarFile = tasks.shadowJar.archiveFile.get().asFile
+        File dexFile = new File(tasks.buildAndDex.temporaryDir, 'dex.jar')
+        File jarFile = tasks.shadowJar.archiveFile.get().asFile
 
-    doFirst {
-        exec {
-            workingDir(tasks.buildAndDex.temporaryDir)
+        doFirst {
+            exec {
+                workingDir(tasks.buildAndDex.temporaryDir)
 
-            File d8path = new File(new File(androidSDK, 'build-tools').listFiles().last(), 'd8.bat')
+                File d8path = new File(new File(androidSDK, 'build-tools').listFiles().last(), 'd8.bat')
 
-            File platforms = new File(androidSDK, 'platforms')
-            File androidJar = platforms.listFiles().reverse().find { it.isDirectory() && new File(it, 'android.jar').exists() }
-            List<File> files = configurations.compileClasspath.asList() + configurations.runtimeClasspath.asList() + [androidJar]
+                File platforms = new File(androidSDK, 'platforms')
+                File androidJar = platforms.listFiles().reverse().find { it.isDirectory() && new File(it, 'android.jar').exists() }
+                List<File> files = configurations.compileClasspath.asList() + configurations.runtimeClasspath.asList() + [androidJar]
 
-            List<String> command = [
-                d8path,
-                '--min-api', '14',
-                *files.collect { ['--classpath', it.path] }.flatten(),
-                // '--no-desugaring',
-                '--output', dexFile, jarFile
-            ]
+                List<String> command = [
+                    d8path,
+                    '--min-api', '14',
+                    *files.collect { ['--classpath', it.path] }.flatten(),
+                    // '--no-desugaring',
+                    '--output', dexFile, jarFile
+                ]
 
-            commandLine('cmd', '/C', *command)
+                commandLine('cmd', '/C', *command)
+            }
         }
-    }
 
-    from(zipTree(jarFile), zipTree(dexFile))
+        from(zipTree(jarFile), zipTree(dexFile))
+    }
 }
