--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ ext {
 
 allprojects {
     apply plugin: 'java-library'
+    apply plugin: 'com.github.johnrengelman.shadow'
 
     repositories {
         mavenCentral()
