--- a/Example/build.gradle
+++ b/Example/build.gradle
@@ -60,3 +60,34 @@ if (devPath != null) {
         }
     }
 }
+if (androidSDK != null) {
+    task buildAndDex(type: Jar) {
+        dependsOn(tasks.shadowJar)
+        archiveName(project.name + '-dexed.jar')
+
+        File dexFile = new File(tasks.buildAndDex.temporaryDir, 'dex.jar')
+        File jarFile = tasks.shadowJar.archiveFile.get().asFile
+
+        doFirst {
+            exec {
+                workingDir(tasks.buildAndDex.temporaryDir)
+
+                File d8path = new File(new File(androidSDK, 'build-tools').listFiles().last(), 'd8.bat')
+                File platforms = new File(androidSDK, 'platforms')
+                File androidJar = platforms.listFiles().reverse().find { it.isDirectory() && new File(it, 'android.jar').exists() }
+                List<File> files = configurations.compileClasspath.asList() + configurations.runtimeClasspath.asList() + [new File(androidJar, 'android.jar')]
+
+                List<String> command = [
+                    d8path,
+                    *files.collect { "--classpath $it.path" },
+                    '--min-api', '14',
+                    '--output', dexFile, jarFile
+                ]
+
+                commandLine('cmd', '/C', command.join(' '))
+            }
+        }
+
+        from(zipTree(jarFile), zipTree(dexFile))
+    }
+}
