--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -7,3 +7,5 @@ setting.modlib.antialiasing.name=MSAA x16
 setting.modlib.antialiasing.description=Enables built in MSAA x16. Requires game restart
 setting.modlib.debug.name=Debug logging
 setting.modlib.debug.description=Enables or disable debug logger.
+
+modlib.servers.refresh=Refresh servers
