--- a/Mod/build.gradle
+++ b/Mod/build.gradle
@@ -1,14 +1,16 @@
 dependencies {
-    api "com.github.Anuken.Arc:arc-core:$mindustryVersion"
-    api "com.github.Anuken.Mindustry:core:$mindustryVersion"
-    implementation 'org.jetbrains:annotations:23.1.0'
+    // compileOnly because common and launcher classes are provided by the launcher
     compileOnly project(':Common')
     compileOnly project(':Launcher')
+
+    compileOnly "com.github.Anuken.Arc:arc-core:$mindustryVersion"
+    compileOnly "com.github.Anuken.Mindustry:core:$mindustryVersion"
+
     compileOnlyApi "org.spongepowered:mixin:$spongeMixinVersion"
 }
 
-task packJar(type: Jar) {
-    archiveName = 'ModLib.jar'
+tasks.register('packJar', Jar) {
+    archiveFileName = 'ModLib.jar'
     from { project(':Launcher').shadowJar }
     with shadowJar
 }
