--- a/Mod/build.gradle
+++ b/Mod/build.gradle
@@ -7,6 +7,8 @@ dependencies {
     compileOnly "com.github.Anuken.Mindustry:core:$mindustryVersion"
 
     compileOnlyApi "org.spongepowered:mixin:$spongeMixinVersion"
+    compileOnlyApi "com.google.guava:guava:$guavaVersion"
+    compileOnlyApi "com.google.code.gson:gson:$gsonVersion"
 }
 
 tasks.register('packJar', Jar) {
