Show mods versions in mods menu

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -9,3 +9,5 @@ setting.modlib.debug.name=Debug logging
 setting.modlib.debug.description=Enables or disable debug logger.
 
 modlib.servers.refresh=Refresh servers
+
+ui.mods.mod.version=Version:
