--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,7 @@
+annotationsVersion=24.0.0
 mindustryVersion=v141
 spongeMixinVersion=0.8.5
 asmVersion=9.2
 guavaVersion=31.1-jre
 gsonVersion=2.10.1
+hjsonVersion=3.0.0
