Fix bug with mod file deletion

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -10,4 +10,5 @@ setting.modlib.debug.description=Enables or disable debug logger.
 
 modlib.servers.refresh=Refresh servers
 
+ui.mods.mod.deleteLoaded=You cannot delete a Java mod while it is loaded. Disable the mod (and restart your game) in order to delete it.
 ui.mods.mod.version=Version:
