--- a/build.gradle
+++ b/build.gradle
@@ -48,7 +48,7 @@ allprojects {
         outputs.upToDateWhen{ false }
     }
 
-    tasks.withType(JavaCompile) {
+    tasks.withType(JavaCompile).configureEach {
         options.encoding = 'UTF-8'
         sourceCompatibility = JavaVersion.VERSION_1_8
         targetCompatibility = JavaVersion.VERSION_1_8
