--- a/Example/build.gradle
+++ b/Example/build.gradle
@@ -4,6 +4,6 @@ plugins {
 
 dependencies {
     compileOnly project(':Mod')
-    compileOnly "com.github.Anuken:Mindustry:$mindustryVersion"
+    compileOnly "com.github.Anuken.MindustryJitpack:core:$mindustryVersion"
 }
 sourceSets.main.resources.srcDirs = ['res/']
