--- a/Mod/build.gradle
+++ b/Mod/build.gradle
@@ -3,7 +3,7 @@ dependencies {
     compileOnlyApi project(':Launcher')
 
     compileOnly "com.github.Anuken.Arc:arc-core:$mindustryVersion"
-    compileOnly "com.github.Anuken.Mindustry:core:$mindustryVersion"
+    compileOnly "com.github.Anuken.MindustryJitpack:core:$mindustryVersion"
 }
 
 tasks.register('packJar', Jar) {
