--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,10 +1,7 @@
-name: Release
+name: Build for release
 on:
-  workflow_dispatch:
-    inputs:
-      version:
-        description: Version string
-        required: true
+  release:
+    types: [ published ]
 jobs:
   release:
     runs-on: ubuntu-latest
@@ -25,26 +22,14 @@ jobs:
       - name: Build artifacts
         run: ./gradlew --no-daemon Mod:packJar
         env:
-          GITHUB_VERSION: ${{ github.event.inputs.version }}
-
-      - name: Create release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ github.event.inputs.version }}
-          release_name: Release ${{ github.event.inputs.version }}
-          body: Release ${{ github.event.inputs.version }}
-          draft: false
-          prerelease: false
+          GITHUB_VERSION: ${{ github.event.release.tag_name }}
 
       - name: Upload artifact to release
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          upload_url: ${{ github.event.release.upload_url }}
           asset_path: ./Mod/build/libs/ModLib.jar
           asset_name: ModLib.jar
           asset_content_type: application/zip
