--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ allprojects {
     repositories {
         mavenCentral()
         maven { url 'https://jitpack.io' }
-        maven { url 'https://repo.spongepowered.org/repository/maven-public/' }
+        maven { url 'https://repo.mc-skyplex.net/releases' }
     }
 
     java {
