Add a setting for version warnings

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -7,6 +7,8 @@ setting.modlib.antialiasing.name=MSAA x16
 setting.modlib.antialiasing.description=Enables built in MSAA x16. Requires game restart
 setting.modlib.debug.name=Debug logging
 setting.modlib.debug.description=Enables or disable debug logger.
+setting.modlib.versionWarning.name=Show version warning
+setting.modlib.versionWarning.description=Show a warning when connecting to a server which have a different version installed
 
 modlib.servers.refresh=Refresh servers
 
