--- a/Launcher/build.gradle
+++ b/Launcher/build.gradle
@@ -1,6 +1,6 @@
 dependencies {
     compileOnly "com.github.Anuken.Arc:arc-core:$mindustryVersion"
-    compileOnly "com.github.Anuken.MindustryJitpack:core:$mindustryVersion"
+    compileOnly "com.github.Anuken.Mindustry:core:$mindustryVersion"
 
     api project(':Common')
     api "org.spongepowered:mixin:$spongeMixinVersion"
